<resources>
    <string name="app_name">RevatureTrainingRoomPlanner</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_assign_batch">Assign Batch</string>
    <string name="menu_batches">Batches</string>
    <string name="menu_rooms">Rooms</string>
    <string name="menu_trainers">Trainers</string>
    <string name="menu_lookup">Trainer/Room Lookup</string>
    <string name="menu_account">Account</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="email">Please enter your E-mail</string>
    <string name="reset_pw_title">Reset Password</string>
    <string name="reset_email_description">An e-mail with further instruction will be sent to your email address.</string>
    <string name="submit">Submit</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="reset_pass_title">Reset Password</string>
    <string name="login_reset">Password Reset</string>
    <string name="login_signin">Sign In</string>
    <string name="trainerlookup_defaultname">Firstname Lastname</string>
    <string name="trainerlookup_default_email">Email default</string>
    <string name="trainerlookup_default_location">Location default</string>
    <string name="trainerlookup_default_skills">skills default</string>
    <string name="location_header">Location</string>
    <string name="email_header">Email</string>
    <string name="skills_header">Skills</string>
    <string name="trainer_room_lookup_header">Trainer/Room Lookup</string>
    <string name="select_trainer_header">Revature Trainers</string>
    <string name="plus">+</string>
    <string name="select_trainer_skillset">Skill Set</string>

</resources>
