<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_batches">

    <fragment
        android:id="@+id/nav_batches"
        android:name="com.revature.revaturetrainingroomplanner.ui.batches.BatchesFragment"
        android:label="@string/menu_batches"
        tools:layout="@layout/fragment_batches" />

    <fragment
        android:id="@+id/nav_rooms"
        android:name="com.revature.revaturetrainingroomplanner.ui.rooms.RoomsFragment"
        android:label="@string/menu_rooms"
        tools:layout="@layout/fragment_rooms" />

    <fragment
        android:id="@+id/nav_trainers"
        android:name="com.revature.revaturetrainingroomplanner.ui.trainers.TrainersFragment"
        android:label="@string/menu_trainers"
        tools:layout="@layout/fragment_trainers" />

</navigation>